Open/open default file commands

--- a/ImageProcessingApp/ImageProcessingApp.csproj
+++ b/ImageProcessingApp/ImageProcessingApp.csproj
@@ -100,5 +100,8 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\default.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
