--- a/ImageConverter/ImageConverterLibrary.csproj
+++ b/ImageConverter/ImageConverterLibrary.csproj
@@ -49,7 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConvertRGB.cs" />
+    <Compile Include="Converter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
